静的解析バグっているけど一旦途中まで
